--- a/templates/mart-trade/search.html
+++ b/templates/mart-trade/search.html
@@ -7,23 +7,24 @@
 	            <div class="card-body">
 	              <h5 class="card-title">Search Company</h5>
 	              <!-- Horizontal Form -->
-	              <form>
+	              <form action="{% url 'search' %}" method="post">
+					{% csrf_token %}
 	                <div class="row mb-3">
 	                  <label for="inputEmail3" class="col-sm-2 col-form-label">Company Name</label>
 	                  <div class="col-sm-10">
-	                    <input type="text" class="form-control" id="inputText" name="company_name">
+	                    <input type="text" class="form-control" id="inputText" name="co_name">
 	                  </div>
 	                </div>
 	                <div class="row mb-3">
 	                  <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
 	                  <div class="col-sm-10">
-	                    <input type="email" class="form-control" id="inputEmail" name="email">
+	                    <input type="email" class="form-control" id="inputEmail" name="email_id">
 	                  </div>
 	                </div>
 	                <div class="row mb-3">
-	                  <label for="inputPassword3" class="col-sm-2 col-form-label">Company Id</label>
+	                  <label for="inputPassword3" class="col-sm-2 col-form-label">Profile Id</label>
 	                  <div class="col-sm-10">
-	                    <input type="text" class="form-control" id="inputPassword" name="co_id">
+	                    <input type="text" class="form-control" id="inputPassword" name="profile_id">
 	                  </div>
 	                </div>
 	                <div class="row mb-3">
